--- a/shop/src/Detail.scss
+++ b/shop/src/Detail.scss
@@ -1,6 +1,15 @@
 
 $메인칼라 : skyblue;
 
+.wow-enter{
+  opacity: 0;
+}
+.wow-enter-active{
+  opacity: 1;
+  transition: all 500ms;
+}
+
+
 .red{
     color: $메인칼라;
 }
